Review Request 7122 see PLS-2548 - fixed bug with marketo enrichments that cause misaligned columns

--- a/le-ui/projects/leadprioritization/app/marketo/views/MarketoEnrichmentView.scss
+++ b/le-ui/projects/leadprioritization/app/marketo/views/MarketoEnrichmentView.scss
@@ -58,6 +58,7 @@
                     .setting {
                         &.col {
                             @include flex-item(0 1 50%);
+                            min-width: 50%;
                         }
                         padding: 0 50px;
                         padding-top: 16px;
